# nxtint

./: .env_template  .gitignore  DESIGN.md  README.md  TODO.md  install.sh  pyproject.toml  requirements.txt  sequence_transformer_design.md
scripts/: main.py
src/nxtint/: __init__.py  __main__.py  logits.py  losses.py  model.py  trainer.py  training.py
src/nxtint/data/: sequences.py
src/nxtint/utils/: config.py  constants.py  ids.py  logging.py
tests/: test_config.py  test_ids.py  test_logits.py  test_losses.py  test_model.py  test_sequences.py  test_trainer.py  test_training.py
