[project]
name = "nxtint"
version = "0.1.0"
description = "Integer sequence prediction using transformers"
authors = [
    { name = "Ivo Maceira", email = "ivomaceira@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "D", "I", "N", "S", "T", "UP", "B", "SIM", "R"]
ignore = ["B019", "D413", "S101", "S603", "S607", "T201"]


